Fix uneven product card on small screens and refactor css

--- a/products/static/products/css/products.css
+++ b/products/static/products/css/products.css
@@ -8,6 +8,8 @@
   height: 12vh;
 }
 
+/* ---------------- Media Queries ---------------- */
+
 @media only screen and (max-width: 415px) {
   .product-body {
     height: inherit;
@@ -19,5 +21,11 @@
     height: 220px;
     width: 125px;
     object-fit: contain;
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .product-body {
+    height: 22vh;
   }
 }
